# runwasi

./: Cargo.toml  Makefile
.github/workflows/: action-test-k3s.yml  ci.yml
crates/containerd-shim-wamr/: Cargo.toml
crates/containerd-shim-wamr/src/: instance.rs  lib.rs  main.rs
crates/containerd-shim-wasm/: Cargo.toml
crates/containerd-shim-wasm/src/: lib.rs
crates/containerd-shim-wasm/src/container/: executor.rs  mod.rs
crates/containerd-shim-wasmer/: Cargo.toml
crates/containerd-shim-wasmer/src/: executor.rs  lib.rs
crates/containerd-shim-wasmer/src/instance/: instance_linux.rs
